Fix image cropping in gallery modal

--- a/gallery.css
+++ b/gallery.css
@@ -63,13 +63,10 @@
 }
 
 .modal-content {
-    margin: auto;
+    margin: 5% auto;
     display: block;
     width: 80%;
     max-width: 700px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .close {
